Refactored into hexagonal architecture and refactored full test structure for compatible hexagonal structure