@@ -13,9 +13,9 @@
         <maven.compiler.source>19</maven.compiler.source>
         <maven.compiler.target>19</maven.compiler.target>
         <javafx.version>21</javafx.version>
-        <junit-version>4.13.1</junit-version>
-        <junit-jupiter-version>5.8.1</junit-jupiter-version>
-        <mockito-core-version>3.12.4</mockito-core-version>
+        <junit-version>4.13.2</junit-version>
+        <junit-jupiter-version>5.10.1</junit-jupiter-version>
+        <mockito-core-version>5.14.2</mockito-core-version>
         <javafx.maven.plugin.version>0.0.8</javafx.maven.plugin.version>
     </properties>
 
@@ -133,6 +133,21 @@
                         </configuration>
                     </execution>
                 </executions>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.2.5</version>
+                <configuration>
+                    <argLine>
+                        --add-opens java.base/java.lang=ALL-UNNAMED
+                        --add-opens java.base/java.util=ALL-UNNAMED
+                        --add-opens java.base/java.lang.reflect=ALL-UNNAMED
+                        --add-opens java.base/java.text=ALL-UNNAMED
+                        --add-opens java.desktop/java.awt.font=ALL-UNNAMED
+                    </argLine>
+                </configuration>
             </plugin>
 
         </plugins>
